--- a/index.html
+++ b/index.html
@@ -9,26 +9,93 @@
 <body>
   <img src="rabi.jpg" alt="Rabi profile">
   <h1>Rabindra Nath Manna</h1>
-  <p><em>Postdoc fellow </em> at <strong><a href="http://www.iacs.res.in/"> </a>IACS</strong></p>
-  <p> I am computational chemist and working on enzyme catalysed reaction
+
+  <p> Computational Chemist
+  </p>
+  <p>
+    Email: rabimanna2022@gmail.com
   </p>
   <hr  />
   <h3>Education</h3>
   <ul>
-  <li>2015 - PhD : Lodz University of Technology, Poland</li>
-<li>2010 - MSc : Indian Institute of Technology, Bombay </li>
-<li>2008 - BSc : University of Calcutta </li>
+<li>2015 - PhD : Lodz University of Technology, Poland (Marie Cuire ITN Fellowship)</li>
+<li>2010 - MSc : Indian Institute of Technology, Bombay (CGPA 9.14/10)</li>
+<li>2008 - BSc : University of Calcutta (73 %) </li>
   </ul>
-  <h3>Postdoctoral Work</h3>
+  <h3>Postdoctoral Experince </h3>
   <ul>
-  <li>2015 - present : Indian Association for Cultivation of Science (IACS) </li>
+  <li>	2021-2022: Postdoctoral Fellow, Indian Association for the Cultivation of Science, India.  (Supervisor: Prof. Ankan Paul & Prof. Debashree Ghosh) </li>
+  <li>	2019-2021: Postdoctoral Fellow, Indian Association for the Cultivation of Science, India.  (Supervisor: Prof. Ankan Paul) </li>
+  <li>	2015-2019: Postdoctoral Fellow, Indian Association for the Cultivation of Science, India.  (Supervisor: Prof. Biman Jana) </li>
   </ul>
-  <h3>Publication</h3>
+  <h3>Research Article Publications</h3>
   <ol>
     <li>B. Ghosh, A. Banerjee,L. Roy, R. N. Manna, R. Nath, A. Paul. “The Role of Copper Salts and O2 in the Mechanism of C≡N Bond Activation for Facilitating Nitrogen Transfer Reactions”. Angew. Chem. Int. Ed. 2022, DOI: 10.1002/anie.202116868. Impact Factor 15.34.</li>
     <li>A. Chakraborty, R. N. Manna, A. Paul, S. Ghosh, “Externally Regulated Specific Molecular Recognition Driven Pathway Selectivity in Supramolecular Polymerization”. Chemistry – A European Journal, 2021, 27, 11458-11467, ISSN 1521-3765, Impact Factor 5.236.</li>
     <li>A. Pradhan, R. N. Manna, “Surface-Modified Covalent Organic Polymer for Metal-Free Electrocatalytic Hydrogen Evolution Reaction”. ACS Applied Polymer Materials, 2021, 3, 1376–1384, ISSN 2637-6105, Impact Factor 4.089.</li>
+<li> A. Sowińska, L. Vasquez, S. Żaczek, R. N. Manna, I. Tuñón, A. Dybala-Defratyka, “Seeking the Source of Catalytic Efficiency of Lindane Dehydrochlorinase, LinA”. The Journal of Physical Chemistry B, 2020, 124, 10353–10364, ISSN 1520-5207, Impact Factor 2.991.
+<li> D. Mukherjee, R. N. Manna, P.Saha, U. Mandal, M. Mitra, “Electronic and Molecular Characterization of An Air-stable Cr (II) Complex Containing Azo-Anion-Radicals”. Journal of Molecular Structure, 2020, 1223, 129247-129255. ISSN 0022-2860, Impact factor 3.196. </li>
+
+</li>
+<li>R. N. Manna, M. Dutta, B. Jana, “Mechanistic Study of ATP Hydrolysis Reaction in Dynein Motor Protein”. Physical Chemistry Chemical Physics, 2020, 22, 1534. ISSN 1463-9084, Impact factor 3.676. </li>
+<li>R. N. Manna,# T. Malakar,# B. Jana, A. Paul, “Unraveling the Crucial Role of Single Active Water Molecule in the Oxidative Cleavage of Aliphatic C–C Bond of 2,4′-Dihydroxyacetophenone Catalyzed by 2,4′-Dihydroxyacetophenone Dioxygenase Enzyme: A Quantum Mechanics/Molecular Mechanics Investigation”. ACS Catalysis 2018, 8, 10043. ISSN 2155-5435, Impact factor 13.086. (# these authors are contributed equally)</li>
+<li>R. N. Manna, A Grzybkowska, F Gelman, A Dybala-Defratyka, “Carbon-bromine bond cleavage–A perspective from bromine and carbon kinetic isotope effects on model debromination reactions”. Chemosphere, 2018, 193, 17. ISSN 0045-6535, Impact factor 7.086. </li>
+<li>B. C. Patra, S. Khilari, R. N. Manna, S. Mondal, D. Pradhan, A. Pradhan, A. Bhaumik, “A Metal-Free Covalent Organic Polymer for Electrocatalytic Hydrogen Evolution”. ACS Catalysis, 2017, 7, 6120. ISSN 2155-5435, Impact factor 13.084. </li>
+<li>R. Halder, R. N. Manna, S. Chakraborty, B Jana, “Modulation of the Conformational Dynamics of Apo-Adenylate Kinase through a π–Cation Interaction”. The Journal of Physical Chemistry B 2017, 121, 5699. ISSN 1520-5207, Impact factor 2.991. </li>
+<li>P. Maity, S. Ahammed, R. N. Manna, B. C. Ranu, “Calcium mediated C–F bond substitution in fluoroarenes towards C–chalcogen bond formation”. Organic Chemistry Frontiers. 2016, 4, 69. ISSN 2052-4129, Impact factor 5.281.</li>
+<li>S. Parui, R. N. Manna, B. Jana, “Destabilization of Hydrophobic Core of Chicken Villin Headpiece in Guanidinium Chloride Induced Denaturation: Hint of π-Cation Interaction”. The Journal of Physical Chemistry B 2016, 120, 9599. ISSN 1520-5207, Impact factor 2.991.</li>
+<li>R. N. Manna, K. Zinovjev, I. Tuñón, A. Dybala-Defratyka, “Dehydrochlorination of Hexachlorocyclohexanes Catalyzed by the LinA Dehydrohalogenase. A QM/MM Study”. The Journal of Physical Chemistry B 2015, 119, 15100. ISSN 1520-5207, Impact factor 2.991. </li>
+<li>R. N. Manna, A. Dybala-Defratyka, “A computational study of the dechlorination of β-hexachlorocyclohexane (β-HCH) catalyzed by the haloalkane dehalogenase LinB”. Archives of Biochemistry and Biophysics. 2014, 562, 43.  ISSN 0003-9861, Impact factor 4.031.</li>
+<li>R. N. Manna, A. Dybala-Defratyka, “Insights into the elimination mechanisms employed for the degradation of different hexachlorocyclohexane isomers using kinetic isotope effects and docking studies”. Journal of Physical Organic Chemistry, 2013, 26, 797. ISSN 1099-1395, Impact factor 2.391. </li>
   </ol>
+  <h3>Book Chapter
+  </h3>
+  <li> L. Szatkowski,* R. N. Manna,* A. Grzybkowska,* R. Kamiński, A. Dybala-Defratyka, P. Paneth, “Measurement and Prediction of Chlorine Kinetic Isotope Effects in Enzymatic Systems”. Methods in Enzymology, 2017, 596, 179. (* these authors are contributed equally) ISSN 0076-6879, Impact factor 2.002.
+  </li>
+  <h3>
+  Awards and Scholarships</h3>
+  <li>SERB-National Postdoctoal fellowship (NPDF): 2017-2019 </li>
+<li>Foreign PhD Scholarship, Lodz University of Technology: 2013-2015.</li>
+<li>European Marie Skłodowska-Curie actions CSI-ITN fellowship: 2011-2014.</li>
+<li>CSIR-NET in Chemistry: 2010. </li>
+<li>GATE in Chemistry: 2010.</li>
+<li>IIT JAM (RANK 46) 2008.</li>
+<h3>
+Computational Skills</h3>
+<li>Programming Languages: Fortran77, Python (NumPy, Pandas, Seaborn , Matplotlib , Plotly , Scikit-Learn)  Machine Learning, and Bash scripts, html and Javascript </li>
+<li>DFT Calculations: Gaussian 09, Desmond, Amber, Orca, Gamess. </li>
+<li>Ab initio DFT study: Gaussian 09, Qsite, Amber. </li>
+<li>Docking: Glide Schrodinger Program, Leadit. Autodock vina.</li>
+<li>Classical Molecular Dynamics simulations:  Amber, Desmond, f-dynamo, Gromacs. </li>
+<li>Quantum Mechanics /Molecular Mechanics simulations: f-dynamo, Amber, Qsite, Q-Chem. </li>
+<li>Visualization tools: Gauss View, VMD, Molden, Maestro, Pymol, Hyperchem, Chemdraw. </li>
+<li>Kinetic isotope effect tools: ISOEFF07, UJISO. </li>
+
+<h3>
+Conferences</h3>
+<li>Femex 2014 in Oslo, Norway. R. N. Manna, A. Dybala-Defratyka. “A QM/MM study on the dehalogenation reaction of the hexachlorocyclohexane (HCH) isomers catalyzed by LinA and LinB dehalogenases”.</li>
+<li>MDMM 2014 at Kudowa Zdroj, Poland. R. N. Manna, A. Dybala-Defratyka. “A QM/MM study on the dehalogenation reaction of the hexachlorocyclohexane (HCH) isomers catalyzed by LinA and LinB dehalogenases”. </li>
+<li>ISOTOPES 2013 at Sopot, Poland. R. N. Manna, A. Dybala-Defratyka. “Theoretical modeling of kinetic isotope effects on aerobic degradation of hexachlorocyclohexane isomers catalyzed by LinA and LinB”. </li>
+<li>Gordon Research Conference 2012 at Galveston, USA. R. N. Manna, A. Dybala-Defratyka, P. Paneth. “Kinetic isotope effects on elimination pathways employed for degradation of different hexachlorocyclohexanes isomers”.</li>
+<li>ISOTOPES 2011 at Greoux-les-Bains, France. R. N. Manna, A. Dybala-Defratyka, P. Paneth. “Probing the degradation mechanism of γ-hexachlorocyclohexane by LinA enzyme”. </li>
+<h3>
+Research visits </h3>
+<li>	19/01/2014-30/01/2014: University of Bath, UK. Supervisor: Prof. Ian H. Williams. Research topic: Calculations of ensemble-averaged isotope effects for methyl transfer catalyzed by glycine N-methyltransferase and its mutants.
+</li>
+<li>15/9/2014–3/10/2014: University of Valencia, Spain, Supervisor: Prof. Iñaki Tuñón. Research topic: Investigation of the dehydrochlorination reactions of γ- and β-HCH isomers using QM/MM free energy simulations techniques.
+</li>
+<h3>
+Professional Training </h3>
+<li>17/03/2019-22/03/2019: “Workshop on Free energy calculations for chemical and biological systems” IIT Kanpur. </li>
+<li>24/06/2013-28/06/2013: “Course on molecular modeling” Lodz University of Technology, Poland.</li>
+<li>16/04/2013-19/04/2013: “Reactive transport modeling of isotope signals in the environment” VU University of Amsterdam, Netherland.</li>
+<li>12/11/2012-14/11/2012: “Course on N isotope methods” EWAG-ETH, Switzerland.</li>
+<li>10/09/2012-14/09/2012: “Course on modern methods and applications for isotope analysis of light elements” Helmholtz Centre for Environmental Research-UFZ, Germany.</li>
+<li>6/05/2012-12/05/2012: “Course on halogen and radiocarbon isotopes in geochemistry” Stockholm University, Sweden. </li>
+<li>20/02/2012-22/02/2012: “Course on ISO-QA assuring the quality of isotopic data used for environmental applications” CSIC Barcelona, Spain. </li>
+<li>15/02/2012-18/02/2012: “Course on analytical methods” CSIC Barcelona, Spain.</li>
+<li>31/03/2011: Schrödinger Workshops “Computational drug discovery- exploring various approaches for novel hit identification” ICM Warsaw, Poland.</li>
+
 </body>
 
 </html>
