--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <li>European Marie Skłodowska-Curie actions CSI-ITN fellowship: 2011-2014.</li>
 <li>CSIR-NET in Chemistry: 2010. </li>
 <li>GATE in Chemistry: 2010.</li>
-<li>IIT JAM (RANK 46) 2008.</li>
+<li>IIT JAM: 2008.</li>
 <h3>
 Computational Skills</h3>
 <li>Programming Languages: Fortran77, Python (NumPy, Pandas, Seaborn , Matplotlib , Plotly , Scikit-Learn)  Machine Learning, and Bash scripts, html and Javascript </li>
