--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <p> Computational Chemist
   </p>
   <p>
-    Email: rabimanna2022@gmail.com
+    <a href="contact.html">Contact</a>
+
   </p>
   <hr  />
   <h3>Education</h3>
@@ -59,7 +60,7 @@
 <li>European Marie Skłodowska-Curie actions CSI-ITN fellowship: 2011-2014.</li>
 <li>CSIR-NET in Chemistry: 2010. </li>
 <li>GATE in Chemistry: 2010.</li>
-<li>IIT JAM: 2008.</li>
+<li>IIT JAM (RANK 46) 2008.</li>
 <h3>
 Computational Skills</h3>
 <li>Programming Languages: Fortran77, Python (NumPy, Pandas, Seaborn , Matplotlib , Plotly , Scikit-Learn)  Machine Learning, and Bash scripts, html and Javascript </li>
@@ -96,6 +97,8 @@ Professional Training </h3>
 <li>15/02/2012-18/02/2012: “Course on analytical methods” CSIC Barcelona, Spain.</li>
 <li>31/03/2011: Schrödinger Workshops “Computational drug discovery- exploring various approaches for novel hit identification” ICM Warsaw, Poland.</li>
 
+
+<a href="References.html">References</a>
 </body>
 
 </html>
