--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
   </ul>
   <h3>Research Article Publications</h3>
   <ol>
+    
+ 
+<li>R. Nath#, R. Manna#, A. Paul, Decoding Regioselective Reaction Mechanism of the Gentisic Acid Catalyzed by Gentisate 1,2-Dioxygenase Enzyme. Catalysis,” Catal. Sci. Technol. , 2022, DOI: 10.1039/D2CY00510G, Impact factor 6.177. (# these authors are contributed equally) </li>
+<li>A. Ghosh, S, Shymal, A, Palui, R N. Manna, M. Jana, S. Mandal, A, Ghosh, A, Bhaumik, “Photoelectrochemical Water oxidation of a Novel Semiconductive Zinc based Metal Thiolate Framworks,” ACS. Appl. Mater. Interfaces, 2022, 14, 37699–37708. Impact factor 10.38. </li>
+
+
     <li>B. Ghosh, A. Banerjee,L. Roy, R. N. Manna, R. Nath, A. Paul. “The Role of Copper Salts and O2 in the Mechanism of C≡N Bond Activation for Facilitating Nitrogen Transfer Reactions”. Angew. Chem. Int. Ed. 2022, DOI: 10.1002/anie.202116868. Impact Factor 15.34.</li>
     <li>A. Chakraborty, R. N. Manna, A. Paul, S. Ghosh, “Externally Regulated Specific Molecular Recognition Driven Pathway Selectivity in Supramolecular Polymerization”. Chemistry – A European Journal, 2021, 27, 11458-11467, ISSN 1521-3765, Impact Factor 5.236.</li>
     <li>A. Pradhan, R. N. Manna, “Surface-Modified Covalent Organic Polymer for Metal-Free Electrocatalytic Hydrogen Evolution Reaction”. ACS Applied Polymer Materials, 2021, 3, 1376–1384, ISSN 2637-6105, Impact Factor 4.089.</li>
